<resources>
    <string name="app_name" translatable="false">StudyBuddy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Study Buddy</string>
    <string name="nav_header_subtitle">18120433@student.hcmus.edu.vn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="account_username" translatable="false">USERNAME</string>
    <string name="account_email">EMAIL</string>
    <string name="account_password">PASSWORD</string>
    <string name="account_register_button">REGISTER</string>
    <string name="account_login_button">LOGIN</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_course">Course</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_register" translatable="false">Register</string>
    <string name="menu_login" translatable="false">Login</string>
    <string name="menu_todolist" translatable="false">To-do list</string>
    <string name="menu_deadline" translatable="false">Deadline</string>

    <string name="settings_language">Language</string>
    <string name="settings_dateformat">Date Time Format</string>
    <string name="settings_notification">Notification</string>
    <string name="settings_fontsize">Font Size</string>
    <string name="settings_googledrive" translatable="false">Google Drive</string>
    <string name="settings_about">About</string>

    <string name="deadline_add_name">Notification name</string>
    <string name="deadline_add_datehour">Date &amp; Hour</string>
    <string name="deadline_add_note">Note</string>
    <string name="deadline_add_button">Add deadline</string>

    <string name="course_addcourse">Add course</string>
    <string name="no_courses_available">No courses available</string>
    <string name="no_deadline_available">No dealines available</string>
    <string name="edit_course">Edit course</string>
    <string name="delete_course">Delete course</string>
    <string name="new_course">New course</string>
    <string name="new_deadline">New dealine</string>
    <string name="course_manage">Manage course</string>
    <string name="deadline_manage">Manage deadline</string>
    <string name="label_course_name">Course name</string>
    <string name="hint_course_name">Enter course name</string>
    <string name="label_course_time">Course time</string>
    <string name="hint_course_time">Enter course time</string>
    <string name="label_course_date">Course date</string>
    <string name="hint_course_date">Enter course date</string>
    <string name="label_reminder">Reminder</string>
    <string name="label_course">Course</string>
    <string name="label_course_list">Course list</string>
    <string name="label_course_detail">Course detail</string>
    <string name="button_save">Save</string>
    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="welcome_title">Welcome to Study Buddy!</string>
    <string name="welcome_message">Thank you for installing the app. Let\'s get started</string>
</resources>