<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_frag"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/gallery_frag"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/slideshow_frag"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/course_frag"
            android:icon="@drawable/ic_menu_course"
            android:title="@string/menu_course" />

        <item
            android:id="@+id/settings_frag"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>