<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/course_frag">

    <fragment
        android:id="@+id/home_frag"
        android:name="com.example.studybuddy.ui.home.home_frag"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/gallery_frag"
        android:name="com.example.studybuddy.ui.gallery.gallery_frag"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/slideshow_frag"
        android:name="com.example.studybuddy.ui.slideshow.slideshow_frag"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/course_frag"
        android:name="com.example.studybuddy.ui.course.CourseFragment"
        android:label="@string/menu_course"
        tools:layout="@layout/fragment_course" >
        <action
            android:id="@+id/action_to_add_course_frag"
            app:destination="@id/add_course_frag" />
    </fragment>

    <fragment
        android:id="@+id/add_course_frag"
        android:name="com.example.studybuddy.ui.course.AddCourseFragment"
        android:label="@string/course_addcourse"
        tools:layout="@layout/fragment_add_course" />

    <fragment
        android:id="@+id/settings_frag"
        android:name="com.example.studybuddy.ui.settings.settings_frag"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>